# nidria-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  SETUP.md  alembic.ini  docker-compose.dev.yml  fly.toml  nidria-features-roadmap-complete.md  openapi.json  pyproject.toml  start.sh
.github/scripts/: ecosystem_invariant.sh
.github/workflows/: ci.yml  ecosystem-invariant.yml
alembic/: env.py
alembic/versions/: 140ca9079e15_add_client_case_deleted_at.py  72b8ab7e41ac_add_saved_view.py  82e355266ed5_step_requirements_and_completion_mode.py  91412f098b91_remove_residence_permit_number.py  a0c6e2f8b4d0_add_journey_template_sector.py  a103249eb0a1_enable_rls_all_public_tables.py  a1c7e2f9b4d6_i18n_content_blobs.py  a1d3f5b7c9e2_add_agency_deletion_log.py  a1d4f8c2e6b9_add_step_content.py  a2c8e4f0b6d2_add_platform_task_watcher.py  a2f7c4e9b1d3_add_planned_costs.py  a3e7c1f9b5d2_add_case_person_birth_name_profession_employer.py  a3e9c1d52b74_crm_mapping_custom_crm_name.py  a4c0e6b2d8f4_add_platform_task_type.py  a4c0e6b2d8f5_add_digest_cursor.py  a6f2c8e4d0b9_add_journey_section_seed_key.py  a7d9c1e3f5b4_add_default_responsible_agent.py  a8c4e0f6b2d9_add_agent_deactivated_at.py  a8c4e2f6b0d3_add_avatar_path.py  af9ddfd8f3b9_create_all_tables.py  b1d7f3a9c2e4_add_client_case_reference.py  b2d9f4a1c8e3_journey_template_name_i18n.py  b2e9d6a4c8f1_add_step_validator.py  b3c8d5f1a2e4_add_per_line_currency.py  b4e0c2a8d6f2_add_translation_job_failed_keys.py  b4f8d2a6c1e9_agent_invitation_external_contact.py  b5d1f7c3e9a6_document_kind_person.py  b7d4e0a2c6f8_add_agency_ai_usage.py  b7f3c1a9d2e4_drop_legacy_required_documents.py  b8e0d2f4a6c9_add_journey_template_field.py  b9d5f1a3c7e2_add_mfa_totp.py  b9d5f3a7c1e6_add_referral_program.py  c0e6a2d8f4b1_add_signup_verification.py  c1f7b3e9d5a4_add_agency_logo_path.py  c2d4e6f8a1b3_add_step_comment.py  c3f1a8d5e7b2_add_step_participants.py  c3f9a1e7b5d2_add_journey_auto_reminder_days.py  c4d8e2f6a1b3_rls_sweep_recent_tables.py  c4d9e6a2b8f5_add_role_permissions_reviewed_at.py  c4e1a7b9d2f8_widen_agency_default_language_check.py  (+56 more)
docs/: expat-multi-agences-inspection.md  paddle-local.md  samples-sections-mapping.md  step-validator.md
samples/: crm_import_example.csv
scripts/: backfill_participants.py  cleanup_orphan_requirements.py  export_openapi.py  export_translation_review.py  migrate_superadmins.py  provision_paddle_catalog.py  replay_usage.py  reset_mfa.py  seed.py  seed_demo_cases.py
scripts/git_hooks/: pre-commit
shared/models/: __init__.py  activity.py  agency.py  agency_deletion_log.py  agent.py  ai_translation_job.py  ai_usage.py  auth_tokens.py  base.py  case_external_assignment.py  case_note.py  case_person.py  case_step_cost.py  case_step_participant.py  case_step_progress.py  case_step_requirement.py  client_case.py  consent.py  crm_import_mapping.py  custom_field.py  digest.py  document.py  expat_user.py  external_contact.py  job.py  (+22 more)
src/: main.py
tests/: conftest.py  test_activity.py  test_admin_adoption.py  test_admin_agencies.py  test_admin_role_definition.py  test_agencies.py  test_agencies_create.py  test_agency_cover.py  test_agency_cover_migration.py  test_agency_deletion.py  test_agency_deletion_migration.py  test_agency_logo.py  test_agency_logo_migration.py  test_ai_run_migration.py  test_ai_source_migration.py  test_ai_translation.py  test_ai_usage_migration.py  test_auth.py  test_avatar_migration.py  test_billing_lock.py  test_billing_paddle.py  test_branded_links.py  test_bulk.py  test_case_billed_migration.py  test_case_billing.py  test_case_documents_view.py  test_case_invite_journey_name.py  test_case_members.py  test_case_person_migration.py  test_case_prefill.py  test_case_requirement_fulfillment.py  test_case_requirements.py  test_case_status_sync.py  test_case_urgency.py  test_cases.py  test_cases_create_wave2.py  test_cases_journey_name.py  test_closed_access.py  test_comment_attachments.py  test_comments.py  (+115 more)
(+168 files in other folders)
