[project]
name = "nidria-backend"
version = "0.1.0"
description = "Nidria — B2B SaaS backend for expatriation agencies"
readme = "CLAUDE.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "apscheduler>=3.11.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "httpx>=0.28.0",
    "loguru>=0.7.2",
    "resend>=2.29.0",
    "supabase>=2.30.0",
    "fpdf2>=2.8.0",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "pyotp>=2.10.0",
    "iso4217>=1.16.20260101",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "testcontainers[postgres]>=4.9.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-python-jose",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = [
    "B008",  # FastAPI uses Depends() as default arg
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    # Heavy library-seed tests (~475s: they seed the 77 country samples per
    # test). `make check` skips them (-m "not seed") for a fast local loop;
    # `make test-seeds` runs them, and CI runs the FULL suite (seeds included).
    "seed: library-seed tests, slow — skipped by make check, run in CI + make test-seeds",
    # Alembic-roundtrip migration tests (tests/*migration*.py, auto-tagged in
    # conftest). Same deal: skipped by make check, run in CI + make test-migrations.
    "migration: alembic-roundtrip tests, slow — skipped by make check, run in CI + make test-migrations",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
